--- a/imhero/pubspec.yaml
+++ b/imhero/pubspec.yaml
@@ -17,3 +17,23 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - asset/img
+  
+  # fonts:
+  #   - family: NotoSans
+
+  #     fonts:
+  #       - asset: asset/fonts/NotoSansKR-Black.otf
+  #         weight: 900
+  #       - asset: asset/fonts/NotoSansKR-Bold.otf
+  #         weight: 700
+  #       - asset: asset/fonts/NotoSansKR-Medium.otf
+  #         weight: 500
+  #       - asset: asset/fonts/NotoSansKR-Regular.otf
+  #         weight: 400
+  #       - asset: asset/fonts/NotoSansKR-Light.otf
+  #         weight: 300
+  #       - asset: asset/fonts/NotoSansKR-Thin.otf
+  #         weight: 100
