--- a/imhero/pubspec.yaml
+++ b/imhero/pubspec.yaml
@@ -1,40 +1,44 @@
 name: imhero
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.0-231.0.dev <4.0.0'
+    sdk: ">=3.2.0-231.0.dev <4.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  flutter_svg: ^2.0.9
+    animated_login: ^1.7.2
+    flutter:
+        sdk: flutter
+    flutter_riverpod: ^2.4.10
+    flutter_svg: ^2.0.9
+    google_sign_in: ^6.2.1
+    provider: ^6.1.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^2.0.0
+    flutter_test:
+        sdk: flutter
+    flutter_lints: ^2.0.0
 
 flutter:
-  uses-material-design: true
+    uses-material-design: true
 
-  assets:
-      - assets/img/
-  
-  fonts:
-    - family: NotoSans
+    assets:
+        - assets/img/
 
-      fonts:
-        - asset: assets/fonts/NotoSans-Black.ttf
-          weight: 900
-        - asset: assets/fonts/NotoSans-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/NotoSans-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/NotoSans-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/NotoSans-Light.ttf
-          weight: 300
-        - asset: assets/fonts/NotoSans-Thin.ttf
-          weight: 100
+    fonts:
+        - family: NotoSans
+
+          fonts:
+              - asset: assets/fonts/NotoSans-Black.ttf
+                weight: 900
+              - asset: assets/fonts/NotoSans-Bold.ttf
+                weight: 700
+              - asset: assets/fonts/NotoSans-Medium.ttf
+                weight: 500
+              - asset: assets/fonts/NotoSans-Regular.ttf
+                weight: 400
+              - asset: assets/fonts/NotoSans-Light.ttf
+                weight: 300
+              - asset: assets/fonts/NotoSans-Thin.ttf
+                weight: 100
