--- a/imhero/pubspec.yaml
+++ b/imhero/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
     flutter_test:
