--- a/imhero/pubspec.yaml
+++ b/imhero/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
+  google_maps_cluster_manager: ^3.1.0
+  google_maps_flutter: ^2.5.3
   google_sign_in: ^6.2.1
 
 dev_dependencies:
