--- a/imhero/pubspec.yaml
+++ b/imhero/pubspec.yaml
@@ -14,6 +14,15 @@ dependencies:
   google_maps_cluster_manager: ^3.1.0
   google_maps_flutter: ^2.5.3
   google_sign_in: ^6.2.1
+  firebase_core: ^2.25.4
+  cloud_firestore: ^4.15.5
+  firebase_auth: ^4.17.5
+  routemaster: ^1.0.1
+  geolocator: ^11.0.0
+  geodesy: ^0.10.2
+  firebase_storage: ^11.6.6
+  file_picker: ^6.1.1
+  path_provider: ^2.1.2
 
 dev_dependencies:
     flutter_test:
