--- a/imhero/pubspec.yaml
+++ b/imhero/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   file_picker: ^6.1.1
   path_provider: ^2.1.2
   rolling_switch: ^0.0.2
+  flutter_advanced_switch: ^3.0.1
 
 dev_dependencies:
     flutter_test:
