--- a/imhero/android/app/src/main/AndroidManifest.xml
+++ b/imhero/android/app/src/main/AndroidManifest.xml
@@ -33,4 +33,6 @@
         android:name="com.google.android.geo.API_KEY"
         android:value="AIzaSyDwc9WyC-sHsyfCpp6Al2V8NtApAzbAHlw"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
