--- a/imhero/android/app/build.gradle
+++ b/imhero/android/app/build.gradle
@@ -52,6 +52,16 @@ android {
         multiDexEnabled true
     }
 
+    signingConfigs {
+    debug {
+        storeFile file('debug.keystore')
+        storePassword 'android'
+        keyAlias 'androiddebugkey'
+        keyPassword 'android'
+        }
+    }
+
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
